--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,6 @@ h3{
 
 .slogan-1{
   font-size: 1.3
-  rem;
 }
 
 .technical{
@@ -280,10 +279,10 @@ margin: 3rem auto;
   }
   
   .card-carousel {
-    --card-width: 80%;
-    --card-max-width: 280px;
-    --card-height: 350px;
-    --carousel-min-width: 600px;
+    width: 80%;
+    max-width: 280px;
+    height: 350px;
+    min-width: 600px;
     z-index: 1;
     position: relative;
     margin: 0 auto;
@@ -296,12 +295,12 @@ margin: 3rem auto;
   @media (min-width: 640px) {
     .card-carousel {
       /* margin-left: calc((100vw - var(--carousel-min-width) - 40px) / 2); */
-      width: 100%;
+      /* width: 100%; */
       color: black;
-      --card-width: 30%;
-      --card-max-width: 160px;
-      --card-height: 2010px;
-      --carousel-min-width: 300px;
+      width: 30%;
+      max-width: 160px;
+      height: 200px;
+      min-width: 100px;
      }
 
   }
