--- a/styles.css
+++ b/styles.css
@@ -89,9 +89,9 @@ img{
 
   text-shadow: 0 0 5px #ffa500, 0 0 15px #ffa500, 0 0 20px #ffa500, 0 0 40px #ffa500, 0 0 60px #ff0000, 0 0 10px #ff8d00, 0 0 98px #ff0000;
   color: #fff6a9;
-animation: blink 12s infinite;
--webkit-animation: blink 12s infinite;
-padding: 3rem;
+  animation: blink 12s infinite;
+  -webkit-animation: blink 12s infinite;
+  padding: 1rem;
 }
 
 h2{
@@ -112,6 +112,7 @@ h3{
 
 .slogan-1{
   font-size: 1.3
+  rem;
 }
 
 .technical{
@@ -279,10 +280,10 @@ margin: 3rem auto;
   }
   
   .card-carousel {
-    width: 80%;
-    max-width: 280px;
-    height: 350px;
-    min-width: 600px;
+    --card-width: 80%;
+    --card-max-width: 280px;
+    --card-height: 350px;
+    --carousel-min-width: 600px;
     z-index: 1;
     position: relative;
     margin: 0 auto;
@@ -291,19 +292,17 @@ margin: 3rem auto;
     min-width: var(--carousel-min-width);
     transition: filter .3s ease;
   }
-  
+   
   @media (min-width: 640px) {
     .card-carousel {
-      /* margin-left: calc((100vw - var(--carousel-min-width) - 40px) / 2); */
-      /* width: 100%; */
-      color: black;
-      width: 30%;
-      max-width: 160px;
-      height: 200px;
-      min-width: 100px;
+      /* /* margin-left: calc((100vw - var(--carousel-min-width) - 40px) / 2); */
+      --card-width: 30%;
+      --card-max-width: 160px;
+      --card-height: 2010px;
+      --carousel-min-width: 300px;
      }
 
-  }
+    }
 
   /* @media (max-width:600px){
     .card-carousel .card{
