--- a/styles.css
+++ b/styles.css
@@ -105,14 +105,18 @@ h3{
    font-style: italic;
 }
 
+.college_name{
+  padding-bottom: 2rem;
+  text-align: center;
+}
+
 .slogan {
   padding: 20px;
   font-size: 2.5rem;
 }
 
 .slogan-1{
-  font-size: 1.3
-  rem;
+  font-size: 1.3rem;
 }
 
 .technical{
@@ -242,6 +246,16 @@ margin: 3rem auto;
     .about{
       width: 60%;
     }
+/* 
+    .container{
+      width: 90%;
+      margin: auto;
+    }
+
+    .card-carousel{
+      width: 10rem;
+      height: 15rem;
+    } */
 
   }
 
@@ -251,11 +265,11 @@ margin: 3rem auto;
     margin: 0;
     padding: 0;
   }
-  
+/*   
   html {
     font-family: system-ui;
     background: #3d76d9;
-  }
+  } */
   
   .visuallyhidden {
     position: absolute;
@@ -271,20 +285,22 @@ margin: 3rem auto;
     margin-top: 1em;
   }
   
+
+
   .container {
     overflow: hidden;
     padding: 20px;
     margin-top: 2em;
     background: rgba(0,0,0,.1);
-    height: 25 em;
+    height: 25em;
   }
   
   .card-carousel {
     --card-width: 80%;
     --card-max-width: 280px;
     --card-height: 350px;
-    --carousel-min-width: 600px;
-    z-index: 1;
+    /* --carousel-min-width: 600px; */
+    z-index: auto;
     position: relative;
     margin: 0 auto;
     width: 100%;
@@ -293,21 +309,19 @@ margin: 3rem auto;
     transition: filter .3s ease;
   }
    
-  @media (min-width: 640px) {
-    .card-carousel {
-      /* /* margin-left: calc((100vw - var(--carousel-min-width) - 40px) / 2); */
-      --card-width: 30%;
-      --card-max-width: 160px;
-      --card-height: 2010px;
-      --carousel-min-width: 300px;
+  /* @media only screen and (max-width: 640px){
+    .card{
+      /* /* margin-left: calc((100vw - var(--carousel-min-width) - 40px) / 2);
+      width: 15rem;
+      height: 8rem;
+      margin: auto;
      }
 
-    }
-
-  /* @media (max-width:600px){
+    } */
+/* 
+  @media (min-width:600px){
     .card-carousel .card{
-      width: 5rem;
-      height: 10rem;
+     background-color: red;
     }
   } */
   
@@ -317,14 +331,14 @@ margin: 3rem auto;
   
   .card-carousel .card {
     background: rgb(220, 219, 219);
-    width: 25rem;
+    width: 18rem;
     /* max-width: var(--card-max-width); */
     text-align: center;
-    padding: 1em;
+    /* padding: 1em; */
     /* min-width: 250px; */
-    height: 30rem;
+    height: 25rem;
     position: absolute;
-    margin: 3rem auto;
+    margin: 1rem auto;
     color: rgba(0,0,0,.5);
     transition: inherit;
     -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.3);
@@ -366,44 +380,10 @@ margin: 3rem auto;
     background-image: url("images/quiz.png");
     background-color: #111;
   }
-  .card:nth-of-type(6) .image-container {
-    background-image: url("images/quiz.png");
-    background-color: #111;
-  }
-  .card:nth-of-type(7) .image-container {
-    background-image: url("images/quiz.png");
-    background-color: #111;
-  }
-  .card:nth-of-type(8) .image-container {
-    background-image: url("images/quiz.png");
-    background-color: #111;
-  }
-  .card:nth-of-type(9) .image-container {
-    background-image: url("images/quiz.png");
-    background-color: #111;
-  }
-  .card:nth-of-type(10) .image-container {
-    background-image: url("images/quiz.png");
-    background-color: #111;
-  }
-  .card:nth-of-type(11) .image-container {
-    background-image: url("images/quiz.png");
-    background-color: #111;
-  }
-  .card:nth-of-type(12) .image-container {
-    background-image: url("images/quiz.png");
-    background-color: #111;
-  }
-  .card:nth-of-type(13) .image-container {
-    background-image: url("images/quiz.png");
-    background-color: #111;
-  }
-  
-  
   
   .image-container {
-    width: 12rem;
-    height: 12rem;
+    width: 8rem;
+    height: 8rem;
     position: relative;
     background-size: cover;
     margin-bottom: 2em;
